--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
-    "expo": "~53.0.17",
+    "eas-cli": "^16.13.4",
+    "expo": "^53.0.17",
     "expo-document-picker": "^13.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-system-ui": "~5.0.10",
     "react": "19.0.0",
-    "react-dev-utils": "^10.0.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-web": "^0.20.0",
-    "react-scripts": "^5.0.1",
-    "expo-system-ui": "~5.0.10",
-    "expo-dev-client": "~5.2.4"
+    "@expo/config-plugins": "~10.1.1",
+    "@expo/prebuild-config": "~9.0.0",
+    "expo-dev-client": "~5.2.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
