--- a/package.json
+++ b/package.json
@@ -11,26 +11,31 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-picker/picker": "^2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.2",
     "@react-navigation/native": "^7.1.14",
-    "eas-cli": "^16.13.4",
-    "expo": "^53.0.17",
+    "@react-navigation/stack": "^7.4.2",
+    "expo": "^53.0.18",
+    "expo-dev-client": "~5.2.4",
     "expo-document-picker": "^13.1.6",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.10",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
-    "react-native-web": "^0.20.0",
-    "@expo/config-plugins": "~10.1.1",
-    "@expo/prebuild-config": "~9.0.0",
-    "expo-dev-client": "~5.2.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-web": "^0.20.0",
+    "react-native-gesture-handler": "~2.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "babel-preset-expo": "~13.0.0",
     "ngrok": "^5.0.0-beta.2"
   },
   "private": true
